--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muhammetaliakbay/structure-check",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Make safe and easy assertions on structure of object and data types",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -21,13 +21,11 @@
     "publish-public": "npm publish --access public",
     "clean": "rimraf ./lib",
     "build": "(npm run clean) && (tsc)",
-    "install": "npm run build",
+    "preinstall": "npm run build",
     "test": "ts-mocha ./src/**/*.spec.ts"
   },
-  "dependencies": {
-    "rimraf": "^3.0.2"
-  },
   "devDependencies": {
+    "rimraf": "^3.0.2",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
