--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "@muhammetaliakbay/structure-check",
-  "version": "0.0.9",
+  "version": "0.0.12",
   "description": "Make safe and easy assertions on structure of object and data types",
   "main": "lib/index.js",
-  "files": [
-    "lib"
-  ],
   "types": "lib/index.d.ts",
   "repository": "https://github.com/muhammetaliakbay/structure-check.git",
   "author": "https://github.com/muhammetaliakbay",
+  "license": "GPL-3.0",
   "keywords": [
     "typescript",
     "generic",
@@ -19,21 +17,30 @@
     "structure",
     "data"
   ],
-  "license": "GNU3",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "publish-public": "npm publish --access public",
-    "clean": "rimraf ./lib",
     "build": "tsc",
-    "test": "ts-mocha ./src/**/*.spec.ts"
+    "build-doc": "typedoc",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
-    "rimraf": "^3.0.2",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
-    "chai": "^4.2.0",
-    "mocha": "^7.2.0",
-    "ts-mocha": "^7.0.0",
+    "tslib": "^2.0.0",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "mocha": "^8.0.1",
+    "chai": "^4.2.0",
+    "typedoc": "^0.17.7",
+    "@types/node": "^14.0.13",
+    "@types/mocha": "^7.0.2",
+    "@types/chai": "^4.2.11"
+  },
+  "dependencies": {
   }
 }
